--- a/Frontend/src/index.html
+++ b/Frontend/src/index.html
@@ -8,7 +8,7 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <html data-theme="retro"></html>
+  <html data-theme="dark"></html>
 
   <app-root></app-root>
 </body>
